@startuml
package payment {
    class PaymentService {
        + prepare()
    }
}

package exchangerate {
    interface ExchangeRateProvider {
        + getExchangeRate()
    }

    class HttpApiExchangeRateProvider {
        + getExchangeRate()
    }

    class ExchangeRateData {
    }
}

PaymentService ..> ExchangeRateProvider : 사용
ExchangeRateProvider <|.. HttpApiExchangeRateProvider : 구현
ExchangeRateProvider .r.> ExchangeRateData
@enduml